# JGS

./: .envrc  .gitmodules  JGS.opam  Makefile  README.md  dune-project
.github/: CODEOWNERS
.github/workflows/: master.yml
doc/: Makefile  type-solver.tex
papers/LOPSRT-23/: Makefile  README  conclusion.tex  eval.tex  intro.tex  java.tex  main.bib  main.tex  rel.tex  solver.tex
papers/report/: type-solver.tex
src/: .gitignore  CT_of_json.ml  CT_of_json.mli  Closure.ml  Closure.mli  JGS.ml  JGS.noc.ml  JGS.opam  JGS.t  JGS_Helpers.ml  JGS_run.ml  JGS_stats.ml  JGSml.ml  Makefile  MutableTypeTable.ml  README.md  closure.ml  closure.mli  dune  dune-project  jtype_set.ml  jtype_set.mli  make_JSONs.ml  mutable_type_table.ml  mutable_type_table.mli  run_perf.sh  test_of_json.ml
src/jsons/: 1.json  1.t  2.t  4.t  5.json  5.t  6closure.json  6closure.t  7.json  7.t  8.json  9.json  dune  guava.t  make_JSONs.ml  run1.t  run2.t  run3.t  run4.json  run4.t  run5.t  run_json.ml  run_json2.ml  test1.json  test2.json  test3.json  test5.json  test6.json
src/jsons_real/: 0.t  1.t  2.t  2_reduced.json  2_reduced.t  3.t  4.t  5.t  6.t  7.t  8.t  9.t  dune
src/jsons_real/guava/: 0.t  dune
src/only_type_queries/: Cloneable.json  Cloneable.t  Iterable_of_object.json  Iterable_of_object.t  Serializable.json  Serializable.t  dune  java.util.NavigableSet_two_vars.json  java.util.TreeSet_two_vars_lower.json
src/only_type_queries/LOPSTR2023/: down1_1.json  down1_2.json  down1_3.json  down1_4.json  down2_1.json  down2_2.json  down3_1.json  down3_2.json  up1_1.json  up1_2.json  up1_3.json  up1_down1_1.json  up1_down1_2.json  up2_1.json  up2_2.json  up3_0.json  up3_1.json
src/only_type_queries/sequential_queries/: java.util.Collection_java.util.List.json  upper_and_lower.json
src/only_type_queries/sequential_queries/unbound_type_variables/: 1.t  Set+Iterable.t  dune  java.lang.Iterable_java.util.Collection_java.util.List.json  java.lang.Iterable_java.util.Collection_java.util.List_java.util.ArrayList.json  java.lang.Iterable_java.util.Collection_java.util.Set_java.util.NavigableSet.json  java.lang.Iterable_java.util.Collection_java.util.Set_java.util.NavigableSet_java.util.SortedSet.json  java.lang.Iterable_java.util.Collection_java.util.Set_java.util.SortedSet_java.util.NavigableSet_java.util.TreeSet.json  java.lang.Iterable_java.util.List.json  java.util.Set_java.lang.Iterable.json  java.util.Set_java.util.List.json
src/only_type_queries/single_queries/extends_array_type_variables/: dune  java.util.NavigableSet.t
src/only_type_queries/single_queries/extends_comparable_type_variables/: dune  java.lang.Iterable.json  java.lang.Iterable.t  java.util.Collection.json  java.util.Collection.t  java.util.HashSet.json  java.util.HashSet.t  java.util.List.json  java.util.List.t  java.util.NavigableSet.json  java.util.NavigableSet.t  java.util.Set.json  java.util.Set.t  java.util.SortedSet.json  java.util.SortedSet.t
src/only_type_queries/single_queries/extends_number_type_variables/: java.lang.Iterable.json  java.lang.Iterable.t  java.util.Collection.json  java.util.HashSet.json  java.util.List.json  java.util.NavigableSet.json  java.util.Set.json  java.util.SortedSet.json
src/only_type_queries/single_queries/extends_string_type_variables/: dune  java.lang.Iterable.json  java.util.Collection.json  java.util.Collection.t  java.util.HashSet.json  java.util.List.json  java.util.List.t  java.util.NavigableSet.json  java.util.Set.json  java.util.SortedSet.json
src/only_type_queries/single_queries/unbound_type_variables/: List.t  dune  java.lang.Iterable.json  java.lang.Iterable.t  java.util.Collection.json  java.util.Collection.t  java.util.HashSet.json  java.util.HashSet.t  java.util.List.json  java.util.NavigableSet.json  java.util.NavigableSet.t  java.util.Set.json  java.util.Set.t  java.util.SortedSet.json  java.util.SortedSet.t
src/tests/: dune  functionalTests.ml  functionalTests.t  functional_tests.ml  functional_tests.t  reflectionTests.ml  reflectionTests.t  reflection_tests.ml  reflection_tests.t  relationalBackwardTests.ml  relationalBackwardTests.t  relationalClosureTests.ml  relationalClosureTests.t  relationalForwardTests.ml  relationalForwardTests.t  relational_backward_tests.ml  relational_backward_tests.t  relational_closure_tests.ml  relational_closure_tests.t  relational_forward_tests.ml  relational_forward_tests.t  standard2.ml  standard2.t  standard_classes_tests.ml  standard_classes_tests.t  standartClassesTests.ml  standartClassesTests.t  test_printer.ml
