(library
 (name JGS_lib)
 (modules JGS JGS_Helpers MutableTypeTable)
 (libraries GT OCanren noCanren.Option noCanren.List)
 (flags (-rectypes))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(rule
 (targets JGS.ml)
 (deps
  (:input JGS.noc.ml))
 (action
  (run
   sh
   -c
   "noCanren -w -8 %{input} -I `ocamlfind -query OCanren` -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
