(env
 (dev
  (flags
   (:standard -warn-error -9-27-32-33-34))))

(library
 (name JGS_lib)
 (modules
  JGS_stats
  JGS
  CT_of_json
  JGS_Helpers
  mutable_type_table
  test_of_json
  closure
  jtype_set
  ;
  )
 (wrapped false)
 (libraries yojson GT OCanren noCanren.Option noCanren.List ocamlgraph str)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   ppx_yojson_conv
   ppx_expect
   GT.ppx_all))
 (inline_tests))

; (rule
;  (targets JGS.ml)
;  (deps
;   (:input JGS.noc.ml)
;   (package noCanren))
;  (action
;   (run
;    sh
;    -c
;    "noCanren -w -8 %{input} -I `ocamlfind -query OCanren` -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
