(lang dune 3.3)

(generate_opam_files true)

(bug_reports "https://github.com/PLTools/JGS/issues")

(name JGS)

(package
 (name JGS)
 (synopsis "Java Generics Solver")
 (maintainers "Dmitrii Kosarev Kakadu@pm.me")
 (depends
  (ocaml
   (= "4.14.2"))
  (ocamlformat
   (and
    :with-test
    (>= 0.26.1)
    (< 0.27)))))
