(lang dune 3.3)

(generate_opam_files true)

(bug_reports "https://github.com/PLTools/JGS/issues")

(name JGS)

(package
 (name JGS)
 (synopsis "Java Generics Solver")
 (maintainers "Dmitrii Kosarev Kakadu@pm.me")
 (depends
  (ocaml
   (= "4.14.2"))
  (mtime
   (>= "2.0.0"))
  benchmark
  (ppx_yojson_conv
   (= "v0.16.0"))
  (ocamlformat
   (and
    :with-test
    (>= 0.26.1)
    (< 0.27)))))
