(env
 (dev
  (flags
   (:standard -warn-error -26))))

(executable
 (name run_json)
 (modules run_json)
 (libraries JGS_lib yojson)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))

(cram
 (deps
  run_json.exe
  test1.json
  2.json
  test3.json
  ;run4.json
  5.json
  6closure.json
  ;guava.json
  ))

(rule
 (targets test1.json 2.json test3.json 5.json 6closure.json)
 (mode
  (promote (until-clean)))
 (deps ./make_JSONs.exe)
 (action
  (run ./make_JSONs.exe)))

(executable
 (name make_JSONs)
 (modules make_JSONs)
 (flags
  (:standard -rectypes))
 (libraries JGS_lib))
