(env
 (dev
  (flags
   (:standard -warn-error -26))))

(executable
 (name run_json)
 (modules run_json)
 (public_name run_json)
 (libraries JGS_lib yojson unix mtime.clock.os mtime)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))

(executable
 (name run_json2)
 (public_name run_json2)
 (modules run_json2)
 (libraries JGS_lib yojson unix mtime.clock.os mtime)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))

(cram
 ; (timeout 2.5) needs dune 3.20
 (deps
  run_json.exe
  run_json2.exe
  test1.json
  2.json
  test3.json
  5.json
  6closure.json
  7.json
  8.json
  9.json
  ;
  ))

(rule
 (targets
  test1.json
  2.json
  test3.json
  5.json
  6closure.json
  7.json
  8.json
  9.json)
 (mode
  (promote (until-clean)))
 (deps ./make_JSONs.exe)
 (action
  (run ./make_JSONs.exe)))

(executable
 (name make_JSONs)
 (modules make_JSONs)
 (flags
  (:standard -rectypes))
 (libraries JGS_lib))
