(env
 (dev
  (flags
   (:standard -warn-error -26))))

(executable
 (name run_json)
 (modules run_json)
 (public_name run_json)
 (libraries JGS_lib yojson unix mtime.clock.os mtime)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))

(executable
 (name run_json2)
 (public_name run_json2)
 (modules run_json2)
 (libraries JGS_lib yojson unix mtime.clock.os mtime)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))

; (timeout 2.5) needs dune 3.20

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to 1)
 (deps ./run_json.exe 1.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to 2)
 (deps ./run_json.exe 2.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to 5)
 (deps ./run_json.exe 5.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to 7)
 (deps ./run_json.exe 7.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to run1)
 (deps ./run_json.exe test1.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to run3)
 (deps ./run_json.exe test3.json))

(cram
 (enabled_if
  (= %{profile} "dev"))
 (applies_to 6closure)
 (deps ./run_json.exe 6closure.json))

(cram
 (deps
  run_json.exe
  8.json
  9.json
  ;
  ))

(rule
 (targets
  1.json
  test1.json
  2.json
  test3.json
  5.json
  6closure.json
  7.json
  8.json
  9.json)
 (mode
  (promote (until-clean)))
 (deps ./make_JSONs.exe)
 (action
  (run ./make_JSONs.exe)))

(executable
 (name make_JSONs)
 (modules make_JSONs)
 (flags
  (:standard -rectypes))
 (libraries JGS_lib))
