(library
 (name test_printer)
 (modules test_printer)
 (libraries JGS_lib OCanren)
 (flags (-rectypes)))

(executable
 (name functional_tests)
 (modules functional_tests)
 (libraries JGS_lib)
 (flags (-rectypes)))

(executable
 (name reflection_tests)
 (modules reflection_tests)
 (libraries JGS_lib)
 (flags (-rectypes)))

(executable
 (name relational_forward_tests)
 (modules relational_forward_tests)
 (libraries JGS_lib OCanren)
 (flags (-rectypes))
 (preprocess
  (pps
   GT.ppx_all
   ;
   )))

(executable
 (name relational_backward_tests)
 (modules relational_backward_tests)
 (libraries JGS_lib test_printer OCanren)
 (flags (-rectypes))
 (preprocess
  (pps
   GT.ppx_all
   OCanren-ppx.ppx_fresh
   ;
   )))

(executable
 (name relational_closure_tests)
 (modules relational_closure_tests)
 (libraries JGS_lib OCanren)
 (flags (-rectypes))
 (preprocess
  (pps
   GT.ppx_all
   OCanren-ppx.ppx_fresh
   ;
   )))

(executable
 (name standard_classes_tests)
 (modules standard_classes_tests)
 (libraries JGS_lib OCanren)
 (flags (-rectypes))
 (preprocess
  (pps
   GT.ppx_all
   OCanren-ppx.ppx_fresh
   ;
   )))

(executable
 (name standard2)
 (modules standard2)
 (libraries JGS_lib OCanren)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps
   GT.ppx_all
   OCanren-ppx.ppx_fresh
   ;
   )))

(cram
 (deps
  ./functional_tests.exe
  ./reflection_tests.exe
  ./relational_forward_tests.exe
  ./relational_backward_tests.exe
  ./relational_closure_tests.exe
  ./standard_classes_tests.exe
  ./standard2.exe
  ;
  ))
